RESOLVED FIXED311156
REGRESSION (STP 239-240): MediaStreamTrack DataCloneError: The object can not be cloned
https://bugs.webkit.org/show_bug.cgi?id=311156
Summary REGRESSION (STP 239-240): MediaStreamTrack DataCloneError: The object can not...
bennett.chen
Reported 2026-03-30 19:28:41 PDT
Created attachment 478856 [details] Test MediaStreanTrack Clone In the current preview version(240), MediaStreamTrack does not appear to support structured cloning. When attempting to transfer or clone a track (e.g., via postMessage to a Worker), it throws the following error: DataCloneError: The object can not be cloned
Attachments
Test MediaStreanTrack Clone (3.14 KB, application/zip)
2026-03-30 19:28 PDT, bennett.chen
no flags
Alexey Proskuryakov
Comment 1 2026-04-01 16:06:31 PDT
Thank you for the report! I cannot reproduce this in STP 240. I get two mirrored videos, and no errors in console.
Alexey Proskuryakov
Comment 2 2026-04-01 16:09:08 PDT
My mistake, I still had STP 239 on this machine. I can reproduce with STP 240.
Radar WebKit Bug Importer
Comment 3 2026-04-01 16:09:16 PDT
youenn fablet
Comment 4 2026-04-07 03:26:04 PDT
EWS
Comment 5 2026-04-07 09:50:14 PDT
Committed 310717@main (3bf2b90a001e): <https://commits.webkit.org/310717@main> Reviewed commits have been landed. Closing PR #62186 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.