REGRESSION (STP 239-240): MediaStreamTrack DataCloneError: The object can not be cloned rdar://173891803 https://bugs.webkit.org/show_bug.cgi?id=311156

Reviewed by Eric Carlson.

We add a quirk that allows to serialize MediaStreamTrack via postMessage.
Basically, any track that is not in the transfer list is cloned and the clone is added to the transfer list.
This ensures that the serialized track is not stopped as part of postMessage.

We enable this quirk for Zoom.
This quirk is only enabled for document's contexts, not workers, since this is sufficient to unbreak Zoom.

Test: http/wpt/mediastream/serialize-mediastreamtrack-to-worker.html
Canonical link: https://commits.webkit.org/310717@main